fix(project): fix overflow on big screen

--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -350,8 +350,6 @@ mat-card {
 
 @media screen and (min-width: 1760px) {
   .project {
-    height: 65rem;
-
     &__header {
       font-size: 3.5rem;
     }
